feat(BUX-45): add taskfile
